# clip_image2vec

./: .gitignore  Dockerfile  download_weight.py  main.py  poetylock.sh  pyproject.toml  run_dev_env.sh  viz.py
