[tool.poetry]
name = "lab_tool"
version = "0.1.0"
description = "research"
authors = ["Taiga Takano <ttttghghnb554z@outlook.jp>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
flake8 = "7.1.1"
torch = "2.5.1"
torchvision = "0.20.1"
torchaudio = "2.5.1"
clip = { git = "https://github.com/openai/CLIP.git", rev = "dcba3cb" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"